--- a/.ebextensions/alb-http-to-https-redirection-full.config
+++ b/.ebextensions/alb-http-to-https-redirection-full.config
@@ -41,7 +41,7 @@ Resources:
     Type: 'AWS::ElasticLoadBalancingV2::Listener'
     Properties:
       Certificates:
-        - CertificateArn: 'arn:aws:acm:eu-central-1:385071190480:certificate/1cfecafd-a951-4b80-a7a6-e22764a9a60e'
+        - CertificateArn: arn:aws:acm:eu-central-1:385071190480:certificate/1cfecafd-a951-4b80-a7a6-e22764a9a60e
       DefaultActions:
         - Type: forward
           TargetGroupArn:
